--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ section {
 }
 
 .secondary-border {
-    border-color: #39a6b2
+    border-color: #39a6b2;
 }
 
 .intro p {
@@ -228,4 +228,29 @@ section {
 .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
+}
+
+/* REACH OUT STYLES START */
+
+.contact {
+    text-align: center;
+    background: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div{
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
 }
